2003-07-15  Vince Darley <vincentdarley@sourceforge.net>

	* tests/vfsZip.test:
	* tests/vfsTar.test: added some new tests for recently fixed
        bugs.
        * library/tarvfs.tcl: fix to bug when closing an empty archive.

        Also updated package to version 1.2.1 since a variety of bugs
        have been fixed since the 1.2 release
	
2003-07-06  Vince Darley <vincentdarley@sourceforge.net>

	* library/ftpvfs.tcl: fix to 'file stat' on a directory, which
        fixes a variety of problems (e.g. recurisve 'file copy' in a 
        directory).  Thanks to msofer for the detailed bug report and
        test script.
	* library/zipvfs.tcl:
	* library/tarvfs.tcl: ensure archive channel is closed if an
	error is encountered while trying to open it.
	
2003-07-03  Vince Darley <vincentdarley@sourceforge.net>

	* library/ftpvfs.tcl: added support for ports other than 21,
	patch from msofer -- thanks.
	
2003-06-16  Vince Darley <vincentdarley@sourceforge.net>

	* library/ftpvfs.tcl: added '-output ::vfs::log' to ftp
        initialisation code to avoid messages being dumped to stderr
        when errors occur.
	
2003-05-16  Vince Darley <vincentdarley@sourceforge.net>

	* library/tkvfs.tcl: added 'tk' widget hierarchy vfs.  Use:
	     package require vfs::tk
	     vfs::tk::Mount .frame.a.b foo
	     cd foo
	     ...
	  to examine.
	* library/pkgIndex.tcl(.in): added new package.
	
2003-05-15  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/pkgIndex.tcl.in: use vfs::dll var directly

2003-05-14  Vince Darley <vincentdarley@sourceforge.net>

	* library/vfsUtils.tcl: fix to package names
	* library/mk4vfs.tcl: fix to 'file attributes' implementation
	
2003-04-29  Vince Darley <vincentdarley@sourceforge.net>

	* library/zipvfs.tcl: patterns in 'glob' should be case-insensitive
	since everything else is.
	
2003-04-04  Andreas Kupries  <andreask@activestate.com>

	* configure.in:
	* tclconfig/tcl.m4: Updated to newest tcl.m4, regenerated
	  configure's.
